keyboard swith between events

--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -12,17 +12,19 @@
     <div class="row d-flex justify-content-center">
         {% for event in translations.events.event_list %}
         <div class="col-12 col-sm-6 col-xxl-4 mb-3 d-flex justify-content-center">
-            <div class="flip-card">
+            <div class="flip-card" tabindex="0" role="button" aria-label="Click to flip the card" aria-live="polite">
                 <div class="flip-card-inner">
                     <!-- Front of the card -->
                     <div class="flip-card-front">
                         <img src="{{ url_for('static', filename=('assets/posters/' + event.img_filename + '.avif')) }}"
-                             class="card-picture gallery-picture" alt="{{ event.title }}">
+                             class="card-picture gallery-picture" alt="{{ event.aria_label }}">
                     </div>
                     <!-- Back of the card -->
                     <div class="flip-card-back text-center">
-                        <h2>{{ event.title }}</h2>
-                        <p class="mb-4">{{ event.date }}</p>
+                        <header class="mb-4">
+                            <h2>{{ event.title }}</h2>
+                            <p>{{ event.date }}</p>
+                        </header>
                         <p>{{ event.description }}</p>
                     </div>
                 </div>
