--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -32,5 +32,19 @@
         </div>
         {% endfor %}
     </div>
+
+    <!--facebook button-->
+    {% set fb_button_text = translations.events.fb_button_text %}
+    <div class="row justify-content-center mt-5">
+        <div class="col-12 col-md-6 text-center">
+            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple"
+               aria-label="facebook">
+                <i class="bi bi-facebook"></i>
+                {{ fb_button_text[0] }}
+                <br>
+                {{ fb_button_text[1] }}
+            </a>
+        </div>
+    </div>
 </div>
 {% endblock %}
