--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -37,7 +37,7 @@
     {% set fb_button_text = translations.events.fb_button_text %}
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6 text-center">
-            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple"
+            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple px-3 py-3"
                aria-label="facebook">
                 <i class="bi bi-facebook"></i>
                 {{ fb_button_text[0] }}
