--- a/app/static/css/gallery_styles.css
+++ b/app/static/css/gallery_styles.css
@@ -41,6 +41,17 @@
     transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
 }
 
+/* Default image styles */
+.gallery-picture {
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+/* Hover effect with shadow */
+.gallery-picture:hover {
+    box-shadow: 0 0 10px var(--lighter-purple);
+    transform: scale(1.05); /* Slightly zoom in */
+}
+
 #gallery_btn{
     font-size: 2rem;
 }
