--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -18,6 +18,7 @@
                     <div class="flip-card-front">
                         <img src="{{ url_for('static', filename=('assets/posters/' + event.img_filename + '.avif')) }}"
                              class="card-picture gallery-picture" alt="{{ event.aria_label }}">
+                        <i class="bi bi-arrow-left-right d-xl-none" id="swap-card-sign"></i>
                     </div>
                     <!-- Back of the card -->
                     <div class="flip-card-back text-center">
