--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -95,8 +95,8 @@
             </div>
             <div class="col-12 col-md-6 text-center">
                 <h2 class="information-heading"> Email </h2>
-                <a href="mailto:club-termix@club-termix.cz" class="btn btn-outline-purple">
-                    <i class="bi bi-envelope-at-fill"></i> club-termix@club-termix.cz
+                <a href="mailto:termixclub@gmail.com" class="btn btn-outline-purple">
+                    <i class="bi bi-envelope-at-fill"></i> termixclub@gmail.com
                 </a>
 
             </div>
