contacts entrance image alt text fix

--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -68,7 +68,7 @@
                 {{ macros.render_picture(
                 base_path='img',
                 base_filename='entrance',
-                alt_text=translations.gallery.alt_text,
+                alt_text=translations.contacts.entrance_image.alt_text,
                 classes=['large-information-content', 'img-fluid']
                 ) }}
             </div>
