--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -7,30 +7,35 @@
 {% endblock %}
 
 {% block content %}
+
+{% macro event_card(event) %}
+<div class="col-12 col-sm-6 col-xxl-4 mb-3 d-flex justify-content-center">
+    <div class="flip-card" tabindex="0" role="button" aria-label="Click to flip the card" aria-live="polite">
+        <div class="flip-card-inner">
+            <!-- Front of the card -->
+            <div class="flip-card-front">
+                <img src="{{ url_for('static', filename=('assets/posters/' + event.img_filename + '.avif')) }}"
+                     class="card-picture gallery-picture" alt="{{ event.aria_label }}">
+                <i class="bi bi-arrow-left-right d-xl-none" id="swap-card-sign"></i>
+            </div>
+            <!-- Back of the card -->
+            <div class="flip-card-back text-center">
+                <header class="mb-4">
+                    <h2>{{ event.title }}</h2>
+                    <p>{{ event.date }}</p>
+                </header>
+                <p>{{ event.description }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endmacro %}
+
 <div class="container">
     <h1 class="heading mt-0 text-center">{{ translations.events.title }}</h1>
     <div class="row d-flex justify-content-center">
         {% for event in translations.events.event_list %}
-        <div class="col-12 col-sm-6 col-xxl-4 mb-3 d-flex justify-content-center">
-            <div class="flip-card" tabindex="0" role="button" aria-label="Click to flip the card" aria-live="polite">
-                <div class="flip-card-inner">
-                    <!-- Front of the card -->
-                    <div class="flip-card-front">
-                        <img src="{{ url_for('static', filename=('assets/posters/' + event.img_filename + '.avif')) }}"
-                             class="card-picture gallery-picture" alt="{{ event.aria_label }}">
-                        <i class="bi bi-arrow-left-right d-xl-none" id="swap-card-sign"></i>
-                    </div>
-                    <!-- Back of the card -->
-                    <div class="flip-card-back text-center">
-                        <header class="mb-4">
-                            <h2>{{ event.title }}</h2>
-                            <p>{{ event.date }}</p>
-                        </header>
-                        <p>{{ event.description }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {{ event_card(event) }}
         {% endfor %}
     </div>
 
