--- a/app/static/css/index_styles.css
+++ b/app/static/css/index_styles.css
@@ -1,15 +1,13 @@
 /*homepage title image*/
 #poster{
     height: 100vh;
+    background-size: cover; /* Ensures the image covers the entire div */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents repeating */
     position: relative;
     overflow: hidden;
 }
-#poster img.poster-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Ensures the image covers the entire container */
-    object-position: center; /* Ensures the center of the image is always visible */
-}
+
 
 /* text field within the poster image*/
 .poster-caption {
