--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,14 @@
     <!-- Favicon -->
     <link rel="icon" href="{{ url_for('static', filename='assets/logos/bar_glass.svg') }}" type="image/svg+xml">
 
+    <!-- Hreflang tags for language versions -->
+    <link rel="alternate" href="https://club-termix.cz/?lang=en" hreflang="en" />
+    <link rel="alternate" href="https://club-termix.cz/?lang=cs" hreflang="cs" />
+
+    <!-- Preconnect for Google Fonts (improves loading speed) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <!-- Google Fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Edu+AU+VIC+WA+NT+Hand&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
