--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,8 +19,8 @@
     <link rel="icon" href="{{ url_for('static', filename='assets/logos/bar_glass.svg') }}" type="image/svg+xml">
 
     <!-- Hreflang tags for language versions -->
-    <link rel="alternate" href="https://club-termix.cz/?lang=en" hreflang="en" />
-    <link rel="alternate" href="https://club-termix.cz/?lang=cs" hreflang="cs" />
+    <link rel="alternate" href="https://club-termix.cz/?lang=en" hreflang="en"/>
+    <link rel="alternate" href="https://club-termix.cz/?lang=cs" hreflang="cs"/>
 
     <!-- Preconnect for Google Fonts (improves loading speed) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,6 +29,9 @@
     <!-- Google Fonts -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Edu+AU+VIC+WA+NT+Hand&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Edu+AU+VIC+WA+NT+Hand&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
 
     {% block extra_styles %}
