--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -53,23 +53,17 @@
     <!--links to other bars-->
     {% set other_bars_title = translations.about.other_bars_title %}
     <div class="text-center">
-        <h3>{{ other_bars_title[0] }} <br> {{ other_bars_title[1] }}</h3>
+        <h2 class="other_bar_title">{{ other_bars_title[0] }}</h2>
+        <h3 class="other_bar_subtitle"> {{ other_bars_title[1] }}</h3>
     </div>
 
     <div class="row justify-content-center text-center mt-5">
-        <div class="col-lg-4 col-sm-6 text-center mb-2">
-            <a href="https://www.facebook.com/clubmax.cz" target="_blank"
-            aria-label="facebook TerMax">
-                <img src="{{ url_for('static', filename='assets/logos/terMax.svg') }}" alt="terMax logo"
-                     class="rounded-circle img-hover white-bg">
-            </a>
-        </div>
 
         <div class="col-lg-4 col-sm-6 text-center">
-            <a href="https://www.facebook.com/garageprague" target="_blank"
+            <a href="https://www.club-garage-prag.cz" target="_blank"
             aria-label="facebook Garage">
-                <div class="circle-frame img-hover">
-                    <img src="{{ url_for('static', filename='assets/logos/garage.svg') }}" id="garage-logo"
+                <div class="circle-frame img-hover" style="background-color: #BBAE39;">
+                    <img src="{{ url_for('static', filename='assets/logos/garage.png') }}" id="garage-logo"
                          alt="Garage logo">
                 </div>
             </a>
