remove blank for garage link

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -60,7 +60,7 @@
     <div class="row justify-content-center text-center mt-5">
 
         <div class="col-lg-4 col-sm-6 text-center">
-            <a href="https://www.club-garage-prag.cz" target="_blank"
+            <a href="https://www.club-garage-prag.cz"
             aria-label="Garage website">
                 <div class="circle-frame img-hover" style="background-color: #BBAE39;">
                     <img src="{{ url_for('static', filename='assets/logos/garage.png') }}" id="garage-logo"
