--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -49,7 +49,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6 text-center">
             <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple px-3 py-3"
-               aria-label="facebook">
+               aria-label="facebook" target="_blank">
                 <i class="bi bi-facebook"></i>
                 {{ fb_button_text[0] }}
                 <br>
