meta description home

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block meta_desription %}
+    <!-- Page-specific description -->
+    {% endblock %}
     <title>Club Termix</title>
 
     <!-- Bootstrap CSS -->
