fix typo meta description

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block meta_desription %}
+    {% block meta_description %}
     <!-- Page-specific description -->
     {% endblock %}
     <title>Club Termix</title>
