--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -127,7 +127,7 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-        <p class="col-md-4 mb-0 text-body-secondary">© 2003–{{ current_year }} Termix Praha s.r.o.</p>
+        <p class="col-md-4 mb-0 text-body-secondary">© 1993–{{ current_year }} CLASSIC-S s.r.o.</p>
         {{ home_link_logo('footer_brand') }}
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item footer-logo">
