--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -154,15 +154,15 @@
         <table class="mt-0 mb-0 text-center">
             <tr>
                 <td>{{ information.operator }}:</td>
-                <td>Termix Praha s.r.o.</td>
+                <td>CLASSIC-S s.r.o.</td>
             </tr>
             <tr>
                 <td>IČO:</td>
-                <td>03956245</td>
+                <td>49614525</td>
             </tr>
             <tr>
                 <td>DIČ:</td>
-                <td>CZ03956245</td>
+                <td>CZ49614525</td>
             </tr>
         </table>
     </div>
