--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -38,7 +38,7 @@
                                 <i class="bi bi-geo-alt-fill normal-icon"></i></span>
                         <span class="d-block cookie-text">({{ location.cookie_disclaimer }})</span>
                     </button>
-                    <a href="https://mapy.cz/s/dodegamezo" target="_blank" id="open-new-window-button"
+                    <a href="https://mapy.cz/s/fufavafuso" target="_blank" id="open-new-window-button"
                        class="btn btn-outline-purple mt-2">
                             <span class="d-block map-button-text">
                                {{ location.map_button_text }} <i class="bi bi-box-arrow-up-right normal-icon"></i>
