zmena hlavniho obrazku

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <!-- Poster Image -->
-<div id="poster" class="mb-5" data-poster-url="{{ url_for('static', filename='assets/img/poster.avif') }}">
+<div id="poster" class="mb-5" data-poster-url="{{ url_for('static', filename='assets/img/poster3.avif') }}">
     {% set poster = translations.home.poster %}
     <div class="poster-caption">
         <h1>Club Termix</h1>
