--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="{{ url_for('static', filename='assets/logos/bar_glass.svg') }}" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Hreflang tags for language versions -->
     <link rel="canonical" href="{{ url_for(request.endpoint, lang=lang, _external=True) }}"/>
