rename folder for events

--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -15,7 +15,7 @@
         <div class="flip-card-inner">
             <!-- Front of the card -->
             <div class="flip-card-front">
-                <img src="{{ url_for('static', filename=('assets/posters/' + event.img_filename + '.avif')) }}"
+                <img src="{{ url_for('static', filename=('assets/event_posters/' + event.img_filename + '.avif')) }}"
                     class="card-picture gallery-picture" alt="{{ event.aria_label }}">
                 <i class="bi bi-arrow-left-right d-xl-none" id="swap-card-sign"></i>
             </div>
