--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-12 col-md-6 text-center mb-2">
                 <h2 class="information-heading"> Chat </h2>
-                <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple"
+                <a href="https://ig.me/m/termix_club" class="btn btn-outline-purple"
                    target="_blank"
                    aria-label="instagram chat">
                     <i class="bi bi-chat-dots-fill normal-icon"></i> Instagram
